--- a/src/features/blog/components/HeroSection.module.scss
+++ b/src/features/blog/components/HeroSection.module.scss
@@ -90,8 +90,7 @@ $c-secondary: #00ff41; /* Matrix Green */
 
   .heroContainer {
     /* 1. Reduce height significantly for mobile to make it less imposing */
-    height: 180px;
-    padding-top: 1rem;
+    height: 250px;
   }
 
   /* Disable intense parallax on mobile to prevent motion sickness/jank */
